// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse_int with non-integer arg radix throws error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(42, 2.1);",
  "displayResult": undefined,
  "error": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with non-string arg str throws error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(42, 2);",
  "displayResult": undefined,
  "error": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=1: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('10', 1);",
  "displayResult": undefined,
  "error": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=37: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('10', 37);",
  "displayResult": undefined,
  "error": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with string arg radix throws error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(42, '2');",
  "displayResult": undefined,
  "error": "Line 1: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.",
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with valid args is ok, but invalid str for radix: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('uu1', 2);",
  "displayResult": undefined,
  "result": NaN,
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with valid args is ok, radix 2: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('1100101010101', 2);",
  "displayResult": undefined,
  "result": 6485,
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with valid args is ok, radix 36: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('uu1', 36);",
  "displayResult": undefined,
  "result": 39961,
  "visualiseListResult": undefined,
}
`;
